include/constantine/curves/bls12_381.h

typedef struct { secret_word limbs[CTT_WORDS_REQUIRED(255)]; } bls12_381_fr;
typedef struct { secret_word limbs[CTT_WORDS_REQUIRED(381)]; } bls12_381_fp;
typedef struct { bls12_381_fp c[2]; } bls12_381_fp2;
typedef struct { bls12_381_fp x, y; } bls12_381_g1_aff;
typedef struct { bls12_381_fp x, y, z; } bls12_381_g1_jac;
typedef struct { bls12_381_fp x, y, z; } bls12_381_g1_prj;
secret_bool ctt_bls12_381_fp_is_zero(const bls12_381_fp* a);
secret_bool ctt_bls12_381_fp_is_one(const bls12_381_fp* a);
secret_bool ctt_bls12_381_fp_is_minus_one(const bls12_381_fp* a);
void        ctt_bls12_381_fp_set_zero(bls12_381_fp* a);
void        ctt_bls12_381_fp_set_one(bls12_381_fp* a);
void        ctt_bls12_381_fp_set_minus_one(bls12_381_fp* a);
void        ctt_bls12_381_fp_neg(bls12_381_fp* r, const bls12_381_fp* a);
void        ctt_bls12_381_fp_neg_in_place(bls12_381_fp* a);
void        ctt_bls12_381_fp_sum(bls12_381_fp* r, const bls12_381_fp* a, const bls12_381_fp* b);
void        ctt_bls12_381_fp_add_in_place(bls12_381_fp* a, const bls12_381_fp* b);
void        ctt_bls12_381_fp_diff(bls12_381_fp* r, const bls12_381_fp* a, const bls12_381_fp* b);
void        ctt_bls12_381_fp_sub_in_place(bls12_381_fp* a, const bls12_381_fp* b);
void        ctt_bls12_381_fp_double(bls12_381_fp* r, const bls12_381_fp* a);
void        ctt_bls12_381_fp_double_in_place(bls12_381_fp* a);
void        ctt_bls12_381_fp_prod(bls12_381_fp* r, const bls12_381_fp* a, const bls12_381_fp* b);
void        ctt_bls12_381_fp_mul_in_place(bls12_381_fp* a, const bls12_381_fp* b);
void        ctt_bls12_381_fp_square(bls12_381_fp* r, const bls12_381_fp* a);
void        ctt_bls12_381_fp_square_in_place(bls12_381_fp* a);
void        ctt_bls12_381_fp_div2(bls12_381_fp* a);
void        ctt_bls12_381_fp_inv(bls12_381_fp* r, const bls12_381_fp* a);
void        ctt_bls12_381_fp_inv_in_place(bls12_381_fp* a);
void        ctt_bls12_381_fp_ccopy(bls12_381_fp* a, const bls12_381_fp* b, secret_bool ctl);
void        ctt_bls12_381_fp_cswap(bls12_381_fp* a, bls12_381_fp* b, secret_bool ctl);
void        ctt_bls12_381_fp_cset_zero(bls12_381_fp* a, secret_bool ctl);
void        ctt_bls12_381_fp_cset_one(bls12_381_fp* a, secret_bool ctl);
void        ctt_bls12_381_fp_cneg_in_place(bls12_381_fp* a, secret_bool ctl);
void        ctt_bls12_381_fp_cadd_in_place(bls12_381_fp* a, const bls12_381_fp* b, secret_bool ctl);
void        ctt_bls12_381_fp_csub_in_place(bls12_381_fp* a, const bls12_381_fp* b, secret_bool ctl);
secret_bool ctt_bls12_381_fp_is_square(const bls12_381_fp* a);
void        ctt_bls12_381_fp_invsqrt(bls12_381_fp* r, const bls12_381_fp* a);
secret_bool ctt_bls12_381_fp_invsqrt_in_place(bls12_381_fp* r, const bls12_381_fp* a);
void        ctt_bls12_381_fp_sqrt_in_place(bls12_381_fp* a);
secret_bool ctt_bls12_381_fp_sqrt_if_square_in_place(bls12_381_fp* a);
void        ctt_bls12_381_fp_sqrt_invsqrt(bls12_381_fp* sqrt, bls12_381_fp* invsqrt, const bls12_381_fp* a);
secret_bool ctt_bls12_381_fp_sqrt_invsqrt_if_square(bls12_381_fp* sqrt, bls12_381_fp* invsqrt, const bls12_381_fp* a);
secret_bool ctt_bls12_381_fp_sqrt_ratio_if_square(bls12_381_fp* r, const bls12_381_fp* u, const bls12_381_fp* v);
secret_bool ctt_bls12_381_fp2_is_eq(const bls12_381_fp2* a, const bls12_381_fp2* b);
secret_bool ctt_bls12_381_fp2_is_zero(const bls12_381_fp2* a);
secret_bool ctt_bls12_381_fp2_is_one(const bls12_381_fp2* a);
secret_bool ctt_bls12_381_fp2_is_minus_one(const bls12_381_fp2* a);
void        ctt_bls12_381_fp2_set_zero(bls12_381_fp2* a);
void        ctt_bls12_381_fp2_set_one(bls12_381_fp2* a);
void        ctt_bls12_381_fp2_set_minus_one(bls12_381_fp2* a);
void        ctt_bls12_381_fp2_neg(bls12_381_fp2* a);
void        ctt_bls12_381_fp2_sum(bls12_381_fp2* r, const bls12_381_fp2* a, const bls12_381_fp2* b);
void        ctt_bls12_381_fp2_add_in_place(bls12_381_fp2* a, const bls12_381_fp2* b);
void        ctt_bls12_381_fp2_diff(bls12_381_fp2* r, const bls12_381_fp2* a, const bls12_381_fp2* b);
void        ctt_bls12_381_fp2_sub_in_place(bls12_381_fp2* a, const bls12_381_fp2* b);
void        ctt_bls12_381_fp2_double(bls12_381_fp2* r, const bls12_381_fp2* a);
void        ctt_bls12_381_fp2_double_in_place(bls12_381_fp2* a);
void        ctt_bls12_381_fp2_conj(bls12_381_fp2* r, const bls12_381_fp2* a);
void        ctt_bls12_381_fp2_conj_in_place(bls12_381_fp2* a);
void        ctt_bls12_381_fp2_conjneg(bls12_381_fp2* r, const bls12_381_fp2* a);
void        ctt_bls12_381_fp2_conjneg_in_place(bls12_381_fp2* a);
void        ctt_bls12_381_fp2_prod(bls12_381_fp2* r, const bls12_381_fp2* a, const bls12_381_fp2* b);
void        ctt_bls12_381_fp2_mul_in_place(bls12_381_fp2* a, const bls12_381_fp2* b);
void        ctt_bls12_381_fp2_square(bls12_381_fp2* r, const bls12_381_fp2* a);
void        ctt_bls12_381_fp2_square_in_place(bls12_381_fp2* a);
void        ctt_bls12_381_fp2_div2(bls12_381_fp2* a);
void        ctt_bls12_381_fp2_inv(bls12_381_fp2* r, const bls12_381_fp2* a);
void        ctt_bls12_381_fp2_inv_in_place(bls12_381_fp2* a);
void        ctt_bls12_381_fp2_ccopy(bls12_381_fp2* a, const bls12_381_fp2* b, secret_bool ctl);
void        ctt_bls12_381_fp2_cset_zero(bls12_381_fp2* a, secret_bool ctl);
void        ctt_bls12_381_fp2_cset_one(bls12_381_fp2* a, secret_bool ctl);
void        ctt_bls12_381_fp2_cneg_in_place(bls12_381_fp2* a, secret_bool ctl);
void        ctt_bls12_381_fp2_cadd_in_place(bls12_381_fp2* a, const bls12_381_fp2* b, secret_bool ctl);
void        ctt_bls12_381_fp2_csub_in_place(bls12_381_fp2* a, const bls12_381_fp2* b, secret_bool ctl);
secret_bool ctt_bls12_381_fp2_is_square(const bls12_381_fp2* a);
void        ctt_bls12_381_fp2_sqrt_in_place(bls12_381_fp2* a);
secret_bool ctt_bls12_381_fp2_sqrt_if_square_in_place(bls12_381_fp2* a);
secret_bool ctt_bls12_381_g1_aff_is_eq(const bls12_381_g1_aff* P, const bls12_381_g1_aff* Q);
secret_bool ctt_bls12_381_g1_aff_is_neutral(const bls12_381_g1_aff* P);
void        ctt_bls12_381_g1_aff_set_neutral(bls12_381_g1_aff* P);
void        ctt_bls12_381_g1_aff_ccopy(bls12_381_g1_aff* P, const bls12_381_g1_aff* Q, secret_bool ctl);
secret_bool ctt_bls12_381_g1_aff_is_on_curve(const bls12_381_fp* x, const bls12_381_fp* y);
void        ctt_bls12_381_g1_aff_neg(bls12_381_g1_aff* P, const bls12_381_g1_aff* Q);
void        ctt_bls12_381_g1_aff_neg_in_place(bls12_381_g1_aff* P);
secret_bool ctt_bls12_381_g1_jac_is_eq(const bls12_381_g1_jac* P, const bls12_381_g1_jac* Q);
secret_bool ctt_bls12_381_g1_jac_is_neutral(const bls12_381_g1_jac* P);
void        ctt_bls12_381_g1_jac_set_neutral(bls12_381_g1_jac* P);
void        ctt_bls12_381_g1_jac_ccopy(bls12_381_g1_jac* P, const bls12_381_g1_jac* Q, secret_bool ctl);
void        ctt_bls12_381_g1_jac_neg(bls12_381_g1_jac* P, const bls12_381_g1_jac* Q);
void        ctt_bls12_381_g1_jac_neg_in_place(bls12_381_g1_jac* P);
void        ctt_bls12_381_g1_jac_cneg_in_place(bls12_381_g1_jac* P, secret_bool ctl);
void        ctt_bls12_381_g1_jac_sum(bls12_381_g1_jac* r, const bls12_381_g1_jac* P, const bls12_381_g1_jac* Q);
void        ctt_bls12_381_g1_jac_add_in_place(bls12_381_g1_jac* P, const bls12_381_g1_jac* Q);
void        ctt_bls12_381_g1_jac_diff(bls12_381_g1_jac* r, const bls12_381_g1_jac* P, const bls12_381_g1_jac* Q);
void        ctt_bls12_381_g1_jac_double(bls12_381_g1_jac* r, const bls12_381_g1_jac* P);
void        ctt_bls12_381_g1_jac_double_in_place(bls12_381_g1_jac* P);
void        ctt_bls12_381_g1_jac_affine(bls12_381_g1_aff* dst, const bls12_381_g1_jac* src);
void        ctt_bls12_381_g1_jac_from_affine(bls12_381_g1_jac* dst, const bls12_381_g1_aff* src);
void        ctt_bls12_381_g1_jac_batch_affine(const bls12_381_g1_aff dst[], const bls12_381_g1_jac src[], size_t n);
void        ctt_bls12_381_g1_jac_scalar_mul_big_coef(bls12_381_g1_jac* P, const big255* scalar);
void        ctt_bls12_381_g1_jac_scalar_mul_fr_coef(bls12_381_g1_jac* P, const bls12_381_fr* scalar);
void        ctt_bls12_381_g1_jac_scalar_mul_big_coef_vartime(bls12_381_g1_jac* P, const big255* scalar);
void        ctt_bls12_381_g1_jac_scalar_mul_fr_coef_vartime(bls12_381_g1_jac* P, const bls12_381_fr* scalar);
void        ctt_bls12_381_g1_jac_multi_scalar_mul_big_coefs_vartime(bls12_381_g1_jac* r, const big255 coefs[], const bls12_381_g1_aff points[], size_t len);
void        ctt_bls12_381_g1_jac_multi_scalar_mul_fr_coefs_vartime(bls12_381_g1_jac* r, const bls12_381_fr coefs[], const bls12_381_g1_aff points[], size_t len);
secret_bool ctt_bls12_381_g1_prj_is_eq(const bls12_381_g1_prj* P, const bls12_381_g1_prj* Q);
secret_bool ctt_bls12_381_g1_prj_is_neutral(const bls12_381_g1_prj* P);
void        ctt_bls12_381_g1_prj_set_neutral(bls12_381_g1_prj* P);
void        ctt_bls12_381_g1_prj_ccopy(bls12_381_g1_prj* P, const bls12_381_g1_prj* Q, secret_bool ctl);
void        ctt_bls12_381_g1_prj_neg(bls12_381_g1_prj* P, const bls12_381_g1_prj* Q);
void        ctt_bls12_381_g1_prj_neg_in_place(bls12_381_g1_prj* P);
void        ctt_bls12_381_g1_prj_cneg_in_place(bls12_381_g1_prj* P, secret_bool ctl);