include/constantine_pasta.h

typedef __SIZE_TYPE__    size_t;
typedef size_t           secret_bool;