constantine-rust/constantine-sys/src/bindings32.rs

extern "C" {
    pub fn ctt_bls12_381_fp_is_zero(a: *const bls12_381_fp) -> secret_bool;
}
extern "C" {
    pub fn ctt_bls12_381_fp_is_one(a: *const bls12_381_fp) -> secret_bool;
}
extern "C" {
    pub fn ctt_bls12_381_fp_is_minus_one(a: *const bls12_381_fp) -> secret_bool;
}
extern "C" {
    pub fn ctt_bls12_381_fp_set_zero(a: *mut bls12_381_fp);
}
extern "C" {
    pub fn ctt_bls12_381_fp_set_one(a: *mut bls12_381_fp);
}
extern "C" {
    pub fn ctt_bls12_381_fp_set_minus_one(a: *mut bls12_381_fp);
}
extern "C" {
    pub fn ctt_bls12_381_fp_neg(r: *mut bls12_381_fp, a: *const bls12_381_fp);
}
extern "C" {
    pub fn ctt_bls12_381_fp_neg_in_place(a: *mut bls12_381_fp);
}
extern "C" {
    pub fn ctt_bls12_381_fp_sum(
        r: *mut bls12_381_fp,
        a: *const bls12_381_fp,
        b: *const bls12_381_fp,
    );
}
extern "C" {
    pub fn ctt_bls12_381_fp_add_in_place(a: *mut bls12_381_fp, b: *const bls12_381_fp);
}
extern "C" {
    pub fn ctt_bls12_381_fp_diff(
        r: *mut bls12_381_fp,
        a: *const bls12_381_fp,
        b: *const bls12_381_fp,
    );
}
extern "C" {
    pub fn ctt_bls12_381_fp_sub_in_place(a: *mut bls12_381_fp, b: *const bls12_381_fp);
}
extern "C" {
    pub fn ctt_bls12_381_fp_double(r: *mut bls12_381_fp, a: *const bls12_381_fp);
}
extern "C" {
    pub fn ctt_bls12_381_fp_double_in_place(a: *mut bls12_381_fp);
}
extern "C" {
    pub fn ctt_bls12_381_fp_prod(
        r: *mut bls12_381_fp,
        a: *const bls12_381_fp,
        b: *const bls12_381_fp,
    );
}
extern "C" {
    pub fn ctt_bls12_381_fp_mul_in_place(a: *mut bls12_381_fp, b: *const bls12_381_fp);
}
extern "C" {
    pub fn ctt_bls12_381_fp_square(r: *mut bls12_381_fp, a: *const bls12_381_fp);
}
extern "C" {
    pub fn ctt_bls12_381_fp_square_in_place(a: *mut bls12_381_fp);
}
extern "C" {
    pub fn ctt_bls12_381_fp_div2(a: *mut bls12_381_fp);
}
extern "C" {
    pub fn ctt_bls12_381_fp_inv(r: *mut bls12_381_fp, a: *const bls12_381_fp);
}
extern "C" {
    pub fn ctt_bls12_381_fp_inv_in_place(a: *mut bls12_381_fp);
}
extern "C" {
    pub fn ctt_bls12_381_fp_ccopy(a: *mut bls12_381_fp, b: *const bls12_381_fp, ctl: secret_bool);
}
extern "C" {
    pub fn ctt_bls12_381_fp_cswap(a: *mut bls12_381_fp, b: *mut bls12_381_fp, ctl: secret_bool);
}
extern "C" {
    pub fn ctt_bls12_381_fp_cset_zero(a: *mut bls12_381_fp, ctl: secret_bool);
}
extern "C" {
    pub fn ctt_bls12_381_fp_cset_one(a: *mut bls12_381_fp, ctl: secret_bool);
}
extern "C" {
    pub fn ctt_bls12_381_fp_cneg_in_place(a: *mut bls12_381_fp, ctl: secret_bool);
}
extern "C" {
    pub fn ctt_bls12_381_fp_cadd_in_place(
        a: *mut bls12_381_fp,
        b: *const bls12_381_fp,
        ctl: secret_bool,
    );
}
extern "C" {
    pub fn ctt_bls12_381_fp_csub_in_place(
        a: *mut bls12_381_fp,
        b: *const bls12_381_fp,
        ctl: secret_bool,
    );
}
extern "C" {
    pub fn ctt_bls12_381_fp_is_square(a: *const bls12_381_fp) -> secret_bool;
}
extern "C" {
    pub fn ctt_bls12_381_fp_invsqrt(r: *mut bls12_381_fp, a: *const bls12_381_fp);
}
extern "C" {
    pub fn ctt_bls12_381_fp_invsqrt_in_place(
        r: *mut bls12_381_fp,
        a: *const bls12_381_fp,
    ) -> secret_bool;
}
extern "C" {
    pub fn ctt_bls12_381_fp_sqrt_in_place(a: *mut bls12_381_fp);
}
extern "C" {
    pub fn ctt_bls12_381_fp_sqrt_if_square_in_place(a: *mut bls12_381_fp) -> secret_bool;
}
extern "C" {
    pub fn ctt_bls12_381_fp_sqrt_invsqrt(
        sqrt: *mut bls12_381_fp,
        invsqrt: *mut bls12_381_fp,
        a: *const bls12_381_fp,
    );
}
extern "C" {
    pub fn ctt_bls12_381_fp_sqrt_invsqrt_if_square(
        sqrt: *mut bls12_381_fp,
        invsqrt: *mut bls12_381_fp,
        a: *const bls12_381_fp,
    ) -> secret_bool;
}
extern "C" {
    pub fn ctt_bls12_381_fp_sqrt_ratio_if_square(
        r: *mut bls12_381_fp,
        u: *const bls12_381_fp,
        v: *const bls12_381_fp,
    ) -> secret_bool;
}
extern "C" {
    pub fn ctt_bls12_381_fp2_is_eq(a: *const bls12_381_fp2, b: *const bls12_381_fp2)
        -> secret_bool;
}
extern "C" {
    pub fn ctt_bls12_381_fp2_is_zero(a: *const bls12_381_fp2) -> secret_bool;
}
extern "C" {
    pub fn ctt_bls12_381_fp2_is_one(a: *const bls12_381_fp2) -> secret_bool;
}
extern "C" {
    pub fn ctt_bls12_381_fp2_is_minus_one(a: *const bls12_381_fp2) -> secret_bool;
}
extern "C" {
    pub fn ctt_bls12_381_fp2_set_zero(a: *mut bls12_381_fp2);
}
extern "C" {
    pub fn ctt_bls12_381_fp2_set_one(a: *mut bls12_381_fp2);
}
extern "C" {
    pub fn ctt_bls12_381_fp2_set_minus_one(a: *mut bls12_381_fp2);
}
extern "C" {
    pub fn ctt_bls12_381_fp2_neg(a: *mut bls12_381_fp2);
}
extern "C" {
    pub fn ctt_bls12_381_fp2_sum(
        r: *mut bls12_381_fp2,
        a: *const bls12_381_fp2,
        b: *const bls12_381_fp2,
    );
}
extern "C" {
    pub fn ctt_bls12_381_fp2_add_in_place(a: *mut bls12_381_fp2, b: *const bls12_381_fp2);
}
extern "C" {
    pub fn ctt_bls12_381_fp2_diff(
        r: *mut bls12_381_fp2,
        a: *const bls12_381_fp2,
        b: *const bls12_381_fp2,
    );
}
extern "C" {
    pub fn ctt_bls12_381_fp2_sub_in_place(a: *mut bls12_381_fp2, b: *const bls12_381_fp2);
}
extern "C" {
    pub fn ctt_bls12_381_fp2_double(r: *mut bls12_381_fp2, a: *const bls12_381_fp2);
}
extern "C" {
    pub fn ctt_bls12_381_fp2_double_in_place(a: *mut bls12_381_fp2);
}
extern "C" {
    pub fn ctt_bls12_381_fp2_conj(r: *mut bls12_381_fp2, a: *const bls12_381_fp2);
}
extern "C" {
    pub fn ctt_bls12_381_fp2_conj_in_place(a: *mut bls12_381_fp2);
}
extern "C" {
    pub fn ctt_bls12_381_fp2_conjneg(r: *mut bls12_381_fp2, a: *const bls12_381_fp2);
}
extern "C" {
    pub fn ctt_bls12_381_fp2_conjneg_in_place(a: *mut bls12_381_fp2);
}
extern "C" {
    pub fn ctt_bls12_381_fp2_prod(
        r: *mut bls12_381_fp2,
        a: *const bls12_381_fp2,
        b: *const bls12_381_fp2,
    );
}
extern "C" {
    pub fn ctt_bls12_381_fp2_mul_in_place(a: *mut bls12_381_fp2, b: *const bls12_381_fp2);
}
extern "C" {
    pub fn ctt_bls12_381_fp2_square(r: *mut bls12_381_fp2, a: *const bls12_381_fp2);
}
extern "C" {
    pub fn ctt_bls12_381_fp2_square_in_place(a: *mut bls12_381_fp2);
}
extern "C" {
    pub fn ctt_bls12_381_fp2_div2(a: *mut bls12_381_fp2);
}
extern "C" {
    pub fn ctt_bls12_381_fp2_inv(r: *mut bls12_381_fp2, a: *const bls12_381_fp2);
}
extern "C" {
    pub fn ctt_bls12_381_fp2_inv_in_place(a: *mut bls12_381_fp2);
}
extern "C" {
    pub fn ctt_bls12_381_fp2_ccopy(
        a: *mut bls12_381_fp2,
        b: *const bls12_381_fp2,
        ctl: secret_bool,
    );
}
extern "C" {
    pub fn ctt_bls12_381_fp2_cset_zero(a: *mut bls12_381_fp2, ctl: secret_bool);
}
extern "C" {
    pub fn ctt_bls12_381_fp2_cset_one(a: *mut bls12_381_fp2, ctl: secret_bool);
}
extern "C" {
    pub fn ctt_bls12_381_fp2_cneg_in_place(a: *mut bls12_381_fp2, ctl: secret_bool);
}
extern "C" {
    pub fn ctt_bls12_381_fp2_cadd_in_place(
        a: *mut bls12_381_fp2,
        b: *const bls12_381_fp2,
        ctl: secret_bool,
    );
}
extern "C" {
    pub fn ctt_bls12_381_fp2_csub_in_place(
        a: *mut bls12_381_fp2,
        b: *const bls12_381_fp2,
        ctl: secret_bool,
    );
}
extern "C" {
    pub fn ctt_bls12_381_fp2_is_square(a: *const bls12_381_fp2) -> secret_bool;
}
extern "C" {
    pub fn ctt_bls12_381_fp2_sqrt_in_place(a: *mut bls12_381_fp2);
}
extern "C" {
    pub fn ctt_bls12_381_fp2_sqrt_if_square_in_place(a: *mut bls12_381_fp2) -> secret_bool;
}
extern "C" {
    pub fn ctt_bls12_381_g1_aff_is_eq(
        P: *const bls12_381_g1_aff,
        Q: *const bls12_381_g1_aff,
    ) -> secret_bool;
}
extern "C" {
    pub fn ctt_bls12_381_g1_aff_is_neutral(P: *const bls12_381_g1_aff) -> secret_bool;
}
extern "C" {
    pub fn ctt_bls12_381_g1_aff_set_neutral(P: *mut bls12_381_g1_aff);
}
extern "C" {
    pub fn ctt_bls12_381_g1_aff_ccopy(
        P: *mut bls12_381_g1_aff,
        Q: *const bls12_381_g1_aff,
        ctl: secret_bool,
    );
}
extern "C" {
    pub fn ctt_bls12_381_g1_aff_is_on_curve(
        x: *const bls12_381_fp,
        y: *const bls12_381_fp,
    ) -> secret_bool;
}
extern "C" {
    pub fn ctt_bls12_381_g1_aff_neg(P: *mut bls12_381_g1_aff, Q: *const bls12_381_g1_aff);
}
extern "C" {
    pub fn ctt_bls12_381_g1_aff_neg_in_place(P: *mut bls12_381_g1_aff);
}
extern "C" {
    pub fn ctt_bls12_381_g1_jac_is_eq(
        P: *const bls12_381_g1_jac,
        Q: *const bls12_381_g1_jac,
    ) -> secret_bool;
}
extern "C" {
    pub fn ctt_bls12_381_g1_jac_is_neutral(P: *const bls12_381_g1_jac) -> secret_bool;
}
extern "C" {
    pub fn ctt_bls12_381_g1_jac_set_neutral(P: *mut bls12_381_g1_jac);
}
extern "C" {
    pub fn ctt_bls12_381_g1_jac_ccopy(
        P: *mut bls12_381_g1_jac,
        Q: *const bls12_381_g1_jac,
        ctl: secret_bool,
    );
}
extern "C" {
    pub fn ctt_bls12_381_g1_jac_neg(P: *mut bls12_381_g1_jac, Q: *const bls12_381_g1_jac);
}
extern "C" {
    pub fn ctt_bls12_381_g1_jac_neg_in_place(P: *mut bls12_381_g1_jac);
}
extern "C" {
    pub fn ctt_bls12_381_g1_jac_cneg_in_place(P: *mut bls12_381_g1_jac, ctl: secret_bool);
}
extern "C" {
    pub fn ctt_bls12_381_g1_jac_sum(
        r: *mut bls12_381_g1_jac,
        P: *const bls12_381_g1_jac,
        Q: *const bls12_381_g1_jac,
    );
}
extern "C" {
    pub fn ctt_bls12_381_g1_jac_add_in_place(P: *mut bls12_381_g1_jac, Q: *const bls12_381_g1_jac);
}
extern "C" {
    pub fn ctt_bls12_381_g1_jac_diff(
        r: *mut bls12_381_g1_jac,
        P: *const bls12_381_g1_jac,
        Q: *const bls12_381_g1_jac,
    );
}
extern "C" {
    pub fn ctt_bls12_381_g1_jac_double(r: *mut bls12_381_g1_jac, P: *const bls12_381_g1_jac);
}
extern "C" {
    pub fn ctt_bls12_381_g1_jac_double_in_place(P: *mut bls12_381_g1_jac);
}
extern "C" {
    pub fn ctt_bls12_381_g1_jac_affine(dst: *mut bls12_381_g1_aff, src: *const bls12_381_g1_jac);
}
extern "C" {
    pub fn ctt_bls12_381_g1_jac_from_affine(
        dst: *mut bls12_381_g1_jac,
        src: *const bls12_381_g1_aff,
    );
}
extern "C" {
    pub fn ctt_bls12_381_g1_jac_batch_affine(
        dst: *const bls12_381_g1_aff,
        src: *const bls12_381_g1_jac,
        n: usize,
    );
}
extern "C" {
    pub fn ctt_bls12_381_g1_jac_scalar_mul_big_coef(
        P: *mut bls12_381_g1_jac,
        scalar: *const big255,
    );
}
extern "C" {
    pub fn ctt_bls12_381_g1_jac_scalar_mul_fr_coef(
        P: *mut bls12_381_g1_jac,
        scalar: *const bls12_381_fr,
    );
}
extern "C" {
    pub fn ctt_bls12_381_g1_jac_scalar_mul_big_coef_vartime(
        P: *mut bls12_381_g1_jac,
        scalar: *const big255,
    );
}
extern "C" {
    pub fn ctt_bls12_381_g1_jac_scalar_mul_fr_coef_vartime(
        P: *mut bls12_381_g1_jac,
        scalar: *const bls12_381_fr,
    );
}
extern "C" {
    pub fn ctt_bls12_381_g1_jac_multi_scalar_mul_big_coefs_vartime(
        r: *mut bls12_381_g1_jac,
        coefs: *const big255,
        points: *const bls12_381_g1_aff,
        len: usize,
    );
}
extern "C" {
    pub fn ctt_bls12_381_g1_jac_multi_scalar_mul_fr_coefs_vartime(
        r: *mut bls12_381_g1_jac,
        coefs: *const bls12_381_fr,
        points: *const bls12_381_g1_aff,
        len: usize,
    );
}
extern "C" {
    pub fn ctt_bls12_381_g1_prj_is_eq(
        P: *const bls12_381_g1_prj,
        Q: *const bls12_381_g1_prj,
    ) -> secret_bool;
}
extern "C" {
    pub fn ctt_bls12_381_g1_prj_is_neutral(P: *const bls12_381_g1_prj) -> secret_bool;
}
extern "C" {
    pub fn ctt_bls12_381_g1_prj_set_neutral(P: *mut bls12_381_g1_prj);
}
extern "C" {
    pub fn ctt_bls12_381_g1_prj_ccopy(
        P: *mut bls12_381_g1_prj,
        Q: *const bls12_381_g1_prj,
        ctl: secret_bool,
    );
}
extern "C" {
    pub fn ctt_bls12_381_g1_prj_neg(P: *mut bls12_381_g1_prj, Q: *const bls12_381_g1_prj);
}
extern "C" {
    pub fn ctt_bls12_381_g1_prj_neg_in_place(P: *mut bls12_381_g1_prj);
}
extern "C" {
    pub fn ctt_bls12_381_g1_prj_cneg_in_place(P: *mut bls12_381_g1_prj, ctl: secret_bool);
}
